--- a/style.css
+++ b/style.css
@@ -48,10 +48,14 @@ iframe {
     transform: translateX(-50%);
     margin: 10%;
     margin-left: 50%;
+    font-size: 16px;
+
 }
 
 footer{
     color: #ffffff;
+    font-size: 10px;
+    font-weight: 800;
 }
 
 @keyframes moveUpDown {
@@ -69,6 +73,10 @@ footer{
 }
 
 @media screen and (max-width: 768px) {
+    body{
+        width: 90%;
+        text-align: justify;
+    }
     h1 {
         font-size: 24px;
     }
@@ -79,5 +87,14 @@ footer{
 
     p {
         font-size: 16px;
+    }
+
+    .robo{
+        margin-top: 100px;
+        margin-bottom: 200px;
+    }
+
+    footer{
+        text-align: center;
     }
 }
