--- a/style.css
+++ b/style.css
@@ -94,6 +94,10 @@ footer{
         margin-bottom: 200px;
     }
 
+   .text{
+       padding: 10px;
+    }
+
     footer{
         text-align: center;
     }
