--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
+@charset "utf-8";
+
 body {
     font-family: 'Bree Serif', serif;
-    font-family: 'Open Sans', sans-serif;
     margin: 20px;
     max-width: 800px;
     transform: translateX(-50%);
